examples/test/testpolicy14282.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14282
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key29: value49
      key5: value3
      key27: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value17
      podSelector:
        matchLabels:
          key49: value39
          key26: value8
          key32: value7
